--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <nav>
-      <img src="./icons/icon_menu.svg" alt="menu" class="menu-burger" />
+      <img src="./icons/icon_menu.svg" alt="menu burger" title="menu burger" class="menu-burger" />
 
       <div class="navbar-left">
         <img src="./logos/logo_yard_sale.svg" alt="logo" class="logo" />
