--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <meta name="theme-color" content="#acd9b2" />
+    <meta name="description" content="Tienda online de cositas bakanas a buen precio..." />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -12,8 +13,9 @@
       rel="stylesheet"
     />
 
+    <link rel="shortcut icon" href="./icons/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css" />
-    <title>YardSale: Tienda online de cositas bakanas</title>
+    <title>Home | YardSale</title>
   </head>
   <body>
     <nav>
@@ -165,10 +167,10 @@
       <div class="product-detail-close">
         <img src="./icons/icon_close.png" alt="close">
       </div>
-      <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="bike">
+      <img id="product_image" src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="bike">
       <div class="product-info">
-        <p>$35,00</p>
-        <p>Bike</p>
+        <p id="product_price">$35,00</p>
+        <p id="product_name">Bike</p>
         <p>With its practical position, this bike also fulfills a decorative function, add your hall or workspace.</p>
         <button class="primary-button add-to-cart-button">
           <img src="./icons/bt_add_to_cart.svg" alt="add to cart">
